fixed bug 4455 missing padding in print view
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@22100 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/Services/COPage/css/print_content.css
+++ b/Services/COPage/css/print_content.css
@@ -25,6 +25,10 @@ td.ilInvisibleBorder
 	padding:40px;
 }
 
+div.ilInvisibleBorder
+{
+	padding:40px;
+}
 
 
 /* --- content styles (will move to content.css) --- */
